--- a/style.css
+++ b/style.css
@@ -1,29 +1,25 @@
 
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="col-"] {
-    width: 100%;
-  }
-}
-
 .nav ul li{
-    margin-left: 12%;
+    margin-left: 10%;
    display: inline;
+   gap: 10%;
+   
 }
 #flag{
     width: 50px;
     height: 50px;
 }
+
 #catalog{
     margin-top: 5%;
     padding-left: 3%;
-    margin-left: 20%;
+    margin-left:15%;
     padding-top: 15px;
     padding-bottom: 15px;
 }
 #search{
     margin-top: 5%;
-    margin-left: 15%;
+    margin-left: 10%;
     padding-right: 15%;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -33,15 +29,42 @@
     height: 60px;
 }
 .icon{
-    margin-left: 20%;
+    /* margin-left: 20%;
     margin-top: 3%;
-    font-size: 30px;
-    
+    font-size: 30px; */
+   margin-top: 6%; 
 }
 .brickhouse{
     background-color: yellow;
     display: flex;
 }
+.xxx{
+    display:block ;
+    gap: 5%;
+    margin-left: 15%;
+}
+.x1{
+    display: flex;
+    gap: 3%;
+    margin-bottom: 3%;
+}
+.x2{display: flex;
+    gap: 3%;
+    margin-bottom: 3%;
+}
+
+.x3{display: flex;
+    gap: 3%;
+    margin-bottom: 3%;
+
+}
+
+.x4{
+    display: flex;
+    gap: 3%;
+    margin-bottom: 3%;
+}
+
 
 .rece{
     margin-left: 30%;
@@ -52,8 +75,11 @@
     font-size: 40px;
 }
 .sessions{
-    margin-right: 20%;
+    margin-right: 5%;
     font-size: 20px;
+    margin-left: 100px;
+
+
 }
 #sara{
     width: 50px;
@@ -74,103 +100,94 @@
     float: right;
     margin-top: -5%;
 }
+.mmm{
+    display: flex;
+    margin-left: 10%;
+    font-size: 30px;
+}
 #women{
-    height: 700px;
+    height:700px;
     width: 900px;
 }
-.sessions{
+/* .sessions{
     float: right;
     margin-top: -40%;
-    
+     */
+.camon{
+    display: flex;
+    margin-left: 15%;
+    gap: 20px;
 }
-#one{
-    width: 400px;
-    height: 400px;
+#one,#two,#cam,#three{
+    width: 300px;
+    height: 300px;
+    gap: 10%;
 }
-#two{
-    width: 400px;
-    height: 400px;
-
+.camon2{
+    display: flex;
+    margin-left: 15%;
+    gap: 20px;
 }
-#cam{
-    width: 400px;
-    height: 400px;
-}
-#three{
-    width: 400px;
-    height: 400px;
-}
-#four{
-    width: 400px;
-    height: 400px;
-}
-#six{
-    width: 400px;
-    height: 400px;
-}
-#seven{
-    width: 400px;
-    height: 400px;
-}
-#eight{
-    width: 400px;
-    height: 400px;
+#four,#six,#seven,#eight{
+    width: 300px;
+    height: 300px;
+    gap: 10%;
 }
 #star{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #marvel{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #avater{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #ideas{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #harry{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #ninja{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 #mini{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 #creator{
-    width: 500px;
-    height: 500px;
+    width: 300px;
+    height: 300px;
 }
 #classic{
-    width: 400px;
-    height: 400px;
+    width: 250px;
+    height: 300px;
 }
 #city{
-    width: 345px;
-    height: 400px;
+    width: 250px;
+    height: 300px;
 }
 #dc{
-    width: 400px;
-    height: 400px;
+    width: 250px;
+    height: 300px;
 }
 #disney{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 #light{
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
 }
 #duplo{
-    width: 345px;
-    height: 400px;
+    width: 250px;
+    height: 300px;
 }
 .series{
     padding: 1% 1%;
@@ -178,18 +195,25 @@
     background-color: yellow;
 }
 #newyear{
-    width: 500px;
+    width: 300px;
     height: 300px;
 }
+body{
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
 #birthday{
-    width: 500px;
+    width: 300px;
     height: 300px;
 }
 #pandora{
     height: 300px;
+    width: 250px;
 }
 .more{
     display: flex;
+    margin-left: 10%;
+    gap: 10%;
 }
 .con{
     margin-left: 40%;
@@ -207,5 +231,6 @@
 .end{
     background-color: purple;
     display: flex;
-    justify-content: space-between;
+    gap: 10%;
 }
+
